Projet Terminé , version à tester

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -6,6 +6,24 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>icons8-cadenas-48.ico</ApplicationIcon>
+    <Version>0.0.1</Version>
+    <Authors>MikBuy</Authors>
+    <Description>Gestionnaire de mot de passe simple et efficace</Description>
+    <Copyright>2022</Copyright>
+    <PackageIcon>icons8-cadenas-48.png</PackageIcon>
+    <NeutralLanguage>fr-BE</NeutralLanguage>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icons8-cadenas-48.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\Downloads\icons8-cadenas-48.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
